--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <style>
     html { scroll-behavior: smooth; }
-    body { font-family: 'Poppins', sans-serif; background-color: #f9f9f9; } /* Standard light background */
+    body { font-family: 'Poppins', sans-serif; background-color: #f9f9f9; }
     .hero {
       background: url('cover.jpg') no-repeat center center/cover;
     }
@@ -27,9 +27,9 @@
 </head>
 <body class="text-gray-800">
 
-  <!-- Hero Header with Background -->
+  <!-- Hero Header -->
   <header class="hero h-[70vh] flex flex-col justify-center items-center text-white text-center relative" data-aos="fade-down">
-    <div class="absolute inset-0 bg-black/50"></div> <!-- Overlay -->
+    <div class="absolute inset-0 bg-black/50"></div>
     <div class="relative z-10">
       <h1 class="text-5xl md:text-6xl font-bold mb-4 tracking-wide">Binary Edge Tech</h1>
       <p class="text-xl md:text-2xl font-light">
@@ -51,7 +51,7 @@
   </nav>
 
   <!-- About -->
-  <section id="about" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
+  <section id="about" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
     <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">About Us</h2>
     <div class="bg-white shadow-lg rounded-xl p-6">
       <p><b>Industry:</b> Information Technology (IT)</p>
@@ -62,7 +62,7 @@
   </section>
 
   <!-- Vision & Mission -->
-  <section id="vision" class="bg-gray-100 py-16 px-6" data-aos="fade-right">
+  <section id="vision" class="bg-indigo-50 py-16 px-6" data-aos="fade-right">
     <div class="max-w-6xl mx-auto">
       <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">Vision & Mission</h2>
       <div class="grid md:grid-cols-2 gap-6">
@@ -82,7 +82,7 @@
   </section>
 
   <!-- Challenges -->
-  <section id="challenges" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-left">
+  <section id="challenges" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-left">
     <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">Challenges</h2>
     <ul class="grid md:grid-cols-2 gap-4">
       <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Cybersecurity threats and data breaches</li>
@@ -94,46 +94,125 @@
   </section>
 
   <!-- Gender Equality -->
-  <section id="gender" class="bg-gray-100 py-16 px-6" data-aos="fade-up">
+  <section id="gender" class="bg-indigo-50 py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">Gender Equality</h2>
-      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6">
-        <p><b>Role Model:</b> Sheryl Sandberg (Former COO, Facebook | Founder of LeanIn.Org)</p>
-        <p>Advocate for women’s leadership in technology, equal pay, and workplace reforms. Author of “Lean In.”</p>
-        <p><b>SDG 5 Relevance:</b> Women make up only 26–28% of the tech workforce globally. We aim to fix gaps in leadership, pay equity, and representation.</p>
+      <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">
+        Gender Equality at Binary Edge Tech
+      </h2>
+      
+      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 space-y-6">
+        
+        <!-- Commitment -->
+        <div>
+          <h3 class="text-xl font-semibold text-orange-500 mb-2">Our Commitment</h3>
+          <p>
+            At <b>Binary Edge Tech</b>, we believe that technology can only reach its fullest potential when it is built by diverse teams. 
+            Gender equality is not just a value we uphold — it is a strategic driver of innovation, problem-solving, and long-term sustainability.
+          </p>
+        </div>
+
+        <!-- Challenges -->
+        <div>
+          <h3 class="text-xl font-semibold text-orange-500 mb-2">Challenges in the IT Sector</h3>
+          <ul class="list-disc list-inside">
+            <li>Low representation of women in leadership and core technical roles.</li>
+            <li>Persistent gender pay gaps across the global IT industry.</li>
+            <li>High attrition rates for women in mid-career stages due to lack of support.</li>
+            <li>Unconscious bias that limits equal growth opportunities.</li>
+          </ul>
+        </div>
+
+        <!-- Initiatives -->
+        <div>
+          <h3 class="text-xl font-semibold text-orange-500 mb-2">What Binary Edge Tech is Doing</h3>
+          <ul class="list-disc list-inside">
+            <li><b>Diverse Hiring Practices</b> → Ensuring balanced representation at all levels.</li>
+            <li><b>Pay Transparency</b> → Conducting regular salary audits to remove wage gaps.</li>
+            <li><b>Women in Leadership</b> → Dedicated mentorship and sponsorship programs to build leaders of tomorrow.</li>
+            <li><b>Returnship Programs</b> → Re-integrating women professionals after career breaks.</li>
+            <li><b>STEM Outreach</b> → Supporting scholarships and training programs for women in AI, cloud, and cybersecurity.</li>
+          </ul>
+        </div>
+
+        <!-- Role Model -->
+        <div>
+          <h3 class="text-xl font-semibold text-orange-500 mb-2">Inspiration</h3>
+          <p>
+            We take inspiration from leaders like <b>Sheryl Sandberg</b>, whose advocacy for women in leadership mirrors our vision. 
+            At Binary Edge Tech, we aim to build a culture where women have equal access to opportunities, influence, and growth.
+          </p>
+        </div>
+
+        <!-- Impact -->
+        <div>
+          <h3 class="text-xl font-semibold text-orange-500 mb-2">Our Impact (2023–2025)</h3>
+          <ul class="list-disc list-inside">
+            <li>Increased women in our workforce from <b>29% → 37%</b>.</li>
+            <li>Boosted women in leadership positions from <b>16% → 24%</b>.</li>
+            <li>Reduced our gender pay gap from <b>3.2% → 0.5%</b>.</li>
+          </ul>
+          <p class="mt-3">
+            These numbers reflect just the beginning of our journey. By 2030, Binary Edge Tech aims to achieve 
+            <b>full gender parity in leadership roles</b> and serve as a benchmark for equality in the IT industry.
+          </p>
+        </div>
+
       </div>
     </div>
   </section>
 
   <!-- Roadmap -->
-  <section id="roadmap" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
-    <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">3-Year Roadmap</h2>
+  <section id="roadmap" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
+    <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">
+      Gender Equality Roadmap at Binary Edge Tech
+    </h2>
+
     <div class="grid md:grid-cols-3 gap-6">
+      <!-- Year 1 -->
       <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 1</h3>
-        <p>Salary audits, inclusive hiring, bias training</p>
+        <h3 class="font-semibold mb-2 text-indigo-900">Year 1: Building Foundations</h3>
+        <ul class="list-disc list-inside">
+          <li>Conduct company-wide gender pay audits.</li>
+          <li>Launch inclusive hiring practices for all departments.</li>
+          <li>Introduce unconscious bias & inclusivity training.</li>
+        </ul>
       </div>
+
+      <!-- Year 2 -->
       <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 2</h3>
-        <p>Sponsorship programs, returnship initiatives, leadership development</p>
+        <h3 class="font-semibold mb-2 text-indigo-900">Year 2: Driving Growth</h3>
+        <ul class="list-disc list-inside">
+          <li>Expand <b>women-in-leadership</b> mentorship programs.</li>
+          <li>Launch returnship programs for women rejoining the workforce.</li>
+          <li>Provide scholarships & upskilling programs in AI, Cloud, and Cybersecurity.</li>
+        </ul>
       </div>
+
+      <!-- Year 3 -->
       <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 3</h3>
-        <p>Accountability frameworks, transparency in data, community outreach</p>
+        <h3 class="font-semibold mb-2 text-indigo-900">Year 3: Achieving Impact</h3>
+        <ul class="list-disc list-inside">
+          <li>Reach <b>40% women workforce representation</b>.</li>
+          <li>Achieve <b>30% women in leadership positions</b>.</li>
+          <li>Maintain a <b>zero gender pay gap</b> policy.</li>
+          <li>Establish Binary Edge Tech as an industry role model for inclusivity.</li>
+        </ul>
       </div>
     </div>
+
+    <!-- Milestones -->
     <div class="mt-8 bg-orange-500 text-white p-6 rounded-xl shadow" data-aos="zoom-in">
-      <h3 class="font-bold mb-2">Milestones Achieved (2023-2025)</h3>
+      <h3 class="font-bold mb-2">Milestones Achieved (2023–2025)</h3>
       <ul class="list-disc list-inside">
-        <li>Women workforce grew from 29% → 37%</li>
-        <li>Women in leadership grew from 16% → 24%</li>
-        <li>Pay gap reduced from 3.2% → 0.5%</li>
+        <li>Women workforce grew from 29% → 37%.</li>
+        <li>Women in leadership grew from 16% → 24%.</li>
+        <li>Gender pay gap reduced from 3.2% → 0.5%.</li>
       </ul>
     </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="bg-gray-100 py-16 px-6" data-aos="fade-up">
+  <section id="contact" class="bg-indigo-50 py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3 inline-block">Contact Us</h2>
       <p class="mb-2">Visit our website: 
