--- a/index.html
+++ b/index.html
@@ -19,41 +19,94 @@
 
   <style>
     html { scroll-behavior: smooth; }
-    body { font-family: 'Poppins', sans-serif; background-color: #f9f9f9; }
-    .hero {
-      background: url('cover.jpg') no-repeat center center/cover;
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(270deg, #3B82F6, #1E3A8A, #2563EB, #1E40AF);
+      background-size: 800% 800%;
+      animation: gradientShift 20s ease infinite;
+      color: white;
+      position: relative;
+      overflow-x: hidden;
+    }
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Glassmorphism Cards */
+    .glass-card {
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 1rem;
+      color: #F1F5F9;
+      box-shadow: 0 0 20px rgba(59, 130, 246, 0.4), 0 0 30px rgba(249, 115, 22, 0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .glass-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 0 25px rgba(59, 130, 246, 0.6), 0 0 35px rgba(249, 115, 22, 0.5);
+    }
+    .glass-nav {
+      background: rgba(30, 58, 138, 0.8);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border-bottom: 2px solid #F97316;
+    }
+    .glass-footer {
+      background: rgba(30, 58, 138, 0.8);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+    }
+
+    /* Particles Canvas */
+    #particles {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    header, nav, section, footer {
+      position: relative;
+      z-index: 1;
     }
   </style>
 </head>
-<body class="text-gray-800">
+<body>
+
+  <!-- Floating Particles -->
+  <canvas id="particles"></canvas>
 
   <!-- Hero Header -->
-  <header class="hero h-[70vh] flex flex-col justify-center items-center text-white text-center relative" data-aos="fade-down">
-    <div class="absolute inset-0 bg-black/50"></div>
-    <div class="relative z-10">
-      <h1 class="text-5xl md:text-6xl font-bold mb-4 tracking-wide">Binary Edge Tech</h1>
-      <p class="text-xl md:text-2xl font-light">
-        <span id="typed-text"></span>
-      </p>
-    </div>
+  <header class="h-[70vh] flex flex-col justify-center items-center text-white text-center" data-aos="fade-down">
+    <h1 class="text-5xl md:text-6xl font-bold mb-4 tracking-wide">Binary Edge Tech</h1>
+    <p class="text-xl md:text-2xl font-light">
+      <span id="typed-text"></span>
+    </p>
   </header>
 
   <!-- Navbar -->
-  <nav class="bg-white shadow-md sticky top-0 z-50 border-b-2 border-orange-500">
+  <nav class="glass-nav sticky top-0 z-50 shadow-md">
     <div class="max-w-6xl mx-auto flex justify-center flex-wrap space-x-4 md:space-x-6 py-3">
-      <a href="#about" class="text-gray-700 hover:text-orange-500 font-medium">About</a>
-      <a href="#vision" class="text-gray-700 hover:text-orange-500 font-medium">Vision & Mission</a>
-      <a href="#challenges" class="text-gray-700 hover:text-orange-500 font-medium">Challenges</a>
-      <a href="#gender" class="text-gray-700 hover:text-orange-500 font-medium">Gender Equality</a>
-      <a href="#roadmap" class="text-gray-700 hover:text-orange-500 font-medium">Roadmap</a>
-      <a href="#contact" class="text-gray-700 hover:text-orange-500 font-medium">Contact</a>
+      <a href="#about" class="text-white hover:text-orange-400 font-medium">About</a>
+      <a href="#vision" class="text-white hover:text-orange-400 font-medium">Vision & Mission</a>
+      <a href="#challenges" class="text-white hover:text-orange-400 font-medium">Challenges</a>
+      <a href="#gender" class="text-white hover:text-orange-400 font-medium">Gender Equality</a>
+      <a href="#roadmap" class="text-white hover:text-orange-400 font-medium">Roadmap</a>
+      <a href="#contact" class="text-white hover:text-orange-400 font-medium">Contact</a>
     </div>
   </nav>
 
   <!-- About -->
-  <section id="about" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
-    <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">About Us</h2>
-    <div class="bg-white shadow-lg rounded-xl p-6">
+  <section id="about" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
+    <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3">About Us</h2>
+    <div class="glass-card p-6">
       <p><b>Industry:</b> Information Technology (IT)</p>
       <p><b>Founded:</b> 2025</p>
       <p><b>Headquarters:</b> Bengaluru, India</p>
@@ -62,58 +115,50 @@
   </section>
 
   <!-- Vision & Mission -->
-  <section id="vision" class="bg-indigo-50 py-16 px-6" data-aos="fade-right">
+  <section id="vision" class="py-16 px-6" data-aos="fade-right">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">Vision & Mission</h2>
+      <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3">Vision & Mission</h2>
       <div class="grid md:grid-cols-2 gap-6">
-        <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6" data-aos="zoom-in">
-          <h3 class="font-semibold text-lg text-orange-500 mb-2">Vision</h3>
+        <div class="glass-card p-6" data-aos="zoom-in">
+          <h3 class="font-semibold text-lg text-orange-400 mb-2">Vision</h3>
           <p>To empower companies that are smart, secure, and inclusive in their digital solutions to shape the future of business and society.</p>
         </div>
-        <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6" data-aos="zoom-in">
-          <h3 class="font-semibold text-lg text-orange-500 mb-2">Mission</h3>
+        <div class="glass-card p-6" data-aos="zoom-in">
+          <h3 class="font-semibold text-lg text-orange-400 mb-2">Mission</h3>
           <p>To deliver world-class tech services while fostering equity, inclusion, and diversity culture, ensuring innovation flourishes through equal opportunity.</p>
         </div>
       </div>
-      <div class="mt-6 bg-orange-500 text-white rounded-xl p-6" data-aos="fade-up">
+      <div class="mt-6 bg-orange-500 text-white rounded-xl p-6 shadow-lg" data-aos="fade-up">
         <p><b>Values:</b> Innovation, Integrity, Inclusivity, Sustainability</p>
       </div>
     </div>
   </section>
 
   <!-- Challenges -->
-  <section id="challenges" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-left">
-    <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">Challenges</h2>
+  <section id="challenges" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-left">
+    <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3">Challenges</h2>
     <ul class="grid md:grid-cols-2 gap-4">
-      <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Cybersecurity threats and data breaches</li>
-      <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Global outsourcing challenges</li>
-      <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Workplace diversity and gender imbalance</li>
-      <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Talent deficit in AI, cloud, cybersecurity</li>
-      <li class="bg-white text-gray-800 p-4 shadow rounded-lg border-l-4 border-orange-500" data-aos="flip-left">Work-life balance issues leading to attrition</li>
+      <li class="glass-card p-4 border-l-4 border-orange-400" data-aos="flip-left">Cybersecurity threats and data breaches</li>
+      <li class="glass-card p-4 border-l-4 border-orange-400" data-aos="flip-left">Global outsourcing challenges</li>
+      <li class="glass-card p-4 border-l-4 border-orange-400" data-aos="flip-left">Workplace diversity and gender imbalance</li>
+      <li class="glass-card p-4 border-l-4 border-orange-400" data-aos="flip-left">Talent deficit in AI, cloud, cybersecurity</li>
+      <li class="glass-card p-4 border-l-4 border-orange-400" data-aos="flip-left">Work-life balance issues leading to attrition</li>
     </ul>
   </section>
 
   <!-- Gender Equality -->
-  <section id="gender" class="bg-indigo-50 py-16 px-6" data-aos="fade-up">
+  <section id="gender" class="py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">
+      <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3">
         Gender Equality at Binary Edge Tech
       </h2>
-      
-      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 space-y-6">
-        
-        <!-- Commitment -->
+      <div class="glass-card p-6 space-y-6">
         <div>
-          <h3 class="text-xl font-semibold text-orange-500 mb-2">Our Commitment</h3>
-          <p>
-            At <b>Binary Edge Tech</b>, we believe that technology can only reach its fullest potential when it is built by diverse teams. 
-            Gender equality is not just a value we uphold — it is a strategic driver of innovation, problem-solving, and long-term sustainability.
-          </p>
+          <h3 class="text-xl font-semibold text-orange-400 mb-2">Our Commitment</h3>
+          <p>At <b>Binary Edge Tech</b>, we believe that technology can only reach its fullest potential when it is built by diverse teams. Gender equality is not just a value we uphold — it is a strategic driver of innovation, problem-solving, and long-term sustainability.</p>
         </div>
-
-        <!-- Challenges -->
         <div>
-          <h3 class="text-xl font-semibold text-orange-500 mb-2">Challenges in the IT Sector</h3>
+          <h3 class="text-xl font-semibold text-orange-400 mb-2">Challenges in the IT Sector</h3>
           <ul class="list-disc list-inside">
             <li>Low representation of women in leadership and core technical roles.</li>
             <li>Persistent gender pay gaps across the global IT industry.</li>
@@ -121,10 +166,8 @@
             <li>Unconscious bias that limits equal growth opportunities.</li>
           </ul>
         </div>
-
-        <!-- Initiatives -->
         <div>
-          <h3 class="text-xl font-semibold text-orange-500 mb-2">What Binary Edge Tech is Doing</h3>
+          <h3 class="text-xl font-semibold text-orange-400 mb-2">What Binary Edge Tech is Doing</h3>
           <ul class="list-disc list-inside">
             <li><b>Diverse Hiring Practices</b> → Ensuring balanced representation at all levels.</li>
             <li><b>Pay Transparency</b> → Conducting regular salary audits to remove wage gaps.</li>
@@ -133,64 +176,43 @@
             <li><b>STEM Outreach</b> → Supporting scholarships and training programs for women in AI, cloud, and cybersecurity.</li>
           </ul>
         </div>
-
-        <!-- Role Model -->
         <div>
-          <h3 class="text-xl font-semibold text-orange-500 mb-2">Inspiration</h3>
-          <p>
-            We take inspiration from leaders like <b>Sheryl Sandberg</b>, whose advocacy for women in leadership mirrors our vision. 
-            At Binary Edge Tech, we aim to build a culture where women have equal access to opportunities, influence, and growth.
-          </p>
-        </div>
-
-        <!-- Impact -->
-        <div>
-          <h3 class="text-xl font-semibold text-orange-500 mb-2">Our Impact (2023–2025)</h3>
+          <h3 class="text-xl font-semibold text-orange-400 mb-2">Our Impact (2023–2025)</h3>
           <ul class="list-disc list-inside">
             <li>Increased women in our workforce from <b>29% → 37%</b>.</li>
             <li>Boosted women in leadership positions from <b>16% → 24%</b>.</li>
             <li>Reduced our gender pay gap from <b>3.2% → 0.5%</b>.</li>
           </ul>
-          <p class="mt-3">
-            These numbers reflect just the beginning of our journey. By 2030, Binary Edge Tech aims to achieve 
-            <b>full gender parity in leadership roles</b> and serve as a benchmark for equality in the IT industry.
-          </p>
+          <p class="mt-3">These numbers reflect just the beginning of our journey. By 2030, Binary Edge Tech aims to achieve <b>full gender parity in leadership roles</b> and serve as a benchmark for equality in the IT industry.</p>
         </div>
-
       </div>
     </div>
   </section>
 
   <!-- Roadmap -->
-  <section id="roadmap" class="bg-gray-50 max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
-    <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3">
+  <section id="roadmap" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
+    <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3">
       Gender Equality Roadmap at Binary Edge Tech
     </h2>
-
     <div class="grid md:grid-cols-3 gap-6">
-      <!-- Year 1 -->
-      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 1: Building Foundations</h3>
+      <div class="glass-card p-6 border-t-4 border-orange-400" data-aos="fade-up">
+        <h3 class="font-semibold mb-2 text-white">Year 1: Building Foundations</h3>
         <ul class="list-disc list-inside">
           <li>Conduct company-wide gender pay audits.</li>
           <li>Launch inclusive hiring practices for all departments.</li>
           <li>Introduce unconscious bias & inclusivity training.</li>
         </ul>
       </div>
-
-      <!-- Year 2 -->
-      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 2: Driving Growth</h3>
+      <div class="glass-card p-6 border-t-4 border-orange-400" data-aos="fade-up" data-aos-delay="100">
+        <h3 class="font-semibold mb-2 text-white">Year 2: Driving Growth</h3>
         <ul class="list-disc list-inside">
           <li>Expand <b>women-in-leadership</b> mentorship programs.</li>
           <li>Launch returnship programs for women rejoining the workforce.</li>
           <li>Provide scholarships & upskilling programs in AI, Cloud, and Cybersecurity.</li>
         </ul>
       </div>
-
-      <!-- Year 3 -->
-      <div class="bg-white text-gray-800 shadow-lg rounded-xl p-6 border-t-4 border-orange-500" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="font-semibold mb-2 text-indigo-900">Year 3: Achieving Impact</h3>
+      <div class="glass-card p-6 border-t-4 border-orange-400" data-aos="fade-up" data-aos-delay="200">
+        <h3 class="font-semibold mb-2 text-white">Year 3: Achieving Impact</h3>
         <ul class="list-disc list-inside">
           <li>Reach <b>40% women workforce representation</b>.</li>
           <li>Achieve <b>30% women in leadership positions</b>.</li>
@@ -199,24 +221,14 @@
         </ul>
       </div>
     </div>
-
-    <!-- Milestones -->
-    <div class="mt-8 bg-orange-500 text-white p-6 rounded-xl shadow" data-aos="zoom-in">
-      <h3 class="font-bold mb-2">Milestones Achieved (2023–2025)</h3>
-      <ul class="list-disc list-inside">
-        <li>Women workforce grew from 29% → 37%.</li>
-        <li>Women in leadership grew from 16% → 24%.</li>
-        <li>Gender pay gap reduced from 3.2% → 0.5%.</li>
-      </ul>
-    </div>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="bg-indigo-50 py-16 px-6" data-aos="fade-up">
+  <section id="contact" class="py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center">
-      <h2 class="text-3xl font-bold text-indigo-900 mb-6 border-l-4 border-orange-500 pl-3 inline-block">Contact Us</h2>
+      <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3 inline-block">Contact Us</h2>
       <p class="mb-2">Visit our website: 
-        <a href="https://www.binaryedge.io" target="_blank" class="text-orange-500 font-semibold hover:underline">www.binaryedge.io</a>
+        <a href="https://www.binaryedge.io" target="_blank" class="text-orange-300 font-semibold hover:underline">www.binaryedge.io</a>
       </p>
       <p class="mb-2">Email: contact@binaryedge.io</p>
       <p>Location: Bengaluru, India</p>
@@ -224,7 +236,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-indigo-900 text-white text-center py-6">
+  <footer class="glass-footer text-white text-center py-6">
     <p>&copy; 2025 Binary Edge Tech | Gender Equality Initiative</p>
   </footer>
 
@@ -249,6 +261,85 @@
         loop: true
       });
     });
+  </script>
+
+  <!-- Particles with Blue-Orange Gradient Lines -->
+  <script>
+    const canvas = document.getElementById("particles");
+    const ctx = canvas.getContext("2d");
+    let particles = [];
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    class Particle {
+      constructor() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * canvas.height;
+        this.radius = Math.random() * 2 + 1;
+        this.speedX = (Math.random() - 0.5) * 0.6;
+        this.speedY = (Math.random() - 0.5) * 0.6;
+      }
+      update() {
+        this.x += this.speedX;
+        this.y += this.speedY;
+        if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+        if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+      }
+      draw() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+        ctx.fillStyle = "rgba(255,255,255,0.8)";
+        ctx.shadowBlur = 10;
+        ctx.shadowColor = "#60A5FA";
+        ctx.fill();
+      }
+    }
+
+    function initParticles(count) {
+      particles = [];
+      for (let i = 0; i < count; i++) {
+        particles.push(new Particle());
+      }
+    }
+
+    function connectParticles() {
+      for (let i = 0; i < particles.length; i++) {
+        for (let j = i + 1; j < particles.length; j++) {
+          let dx = particles[i].x - particles[j].x;
+          let dy = particles[i].y - particles[j].y;
+          let distance = Math.sqrt(dx * dx + dy * dy);
+          if (distance < 120) {
+            const gradient = ctx.createLinearGradient(particles[i].x, particles[i].y, particles[j].x, particles[j].y);
+            gradient.addColorStop(0, "rgba(59,130,246,0.4)");  // blue
+            gradient.addColorStop(1, "rgba(249,115,22,0.4)");  // orange
+            ctx.beginPath();
+            ctx.strokeStyle = gradient;
+            ctx.lineWidth = 1.2;
+            ctx.moveTo(particles[i].x, particles[i].y);
+            ctx.lineTo(particles[j].x, particles[j].y);
+            ctx.stroke();
+          }
+        }
+      }
+    }
+
+    function animateParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach(p => {
+        p.update();
+        p.draw();
+      });
+      connectParticles();
+      requestAnimationFrame(animateParticles);
+    }
+
+    initParticles(80);
+    animateParticles();
   </script>
 
 </body>
