--- a/index.html
+++ b/index.html
@@ -84,16 +84,32 @@
   <canvas id="particles"></canvas>
 
   <!-- Hero Header -->
-  <header class="h-[70vh] flex flex-col justify-center items-center text-white text-center" data-aos="fade-down">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4 tracking-wide">Binary Edge Tech</h1>
-    <p class="text-xl md:text-2xl font-light">
-      <span id="typed-text"></span>
-    </p>
-  </header>
+<header class="h-[70vh] flex flex-col justify-center items-center text-white text-center" data-aos="fade-down">
+  <!-- Logo -->
+  <img src="img.jpeg" 
+       alt="Binary Edge Technologies Logo" 
+       class="w-32 md:w-40 mb-4">
 
-  <!-- Navbar -->
-  <nav class="glass-nav sticky top-0 z-50 shadow-md">
-    <div class="max-w-6xl mx-auto flex justify-center flex-wrap space-x-4 md:space-x-6 py-3">
+  <!-- Company Name -->
+  <!-- <h1 class="text-5xl md:text-6xl font-bold mb-4 tracking-wide">Binary Edge Tech</h1> -->
+  <p class="text-xl md:text-2xl font-light">
+    <span id="typed-text"></span>
+  </p>
+</header>
+
+<!-- Navbar -->
+<nav class="glass-nav sticky top-0 z-50 shadow-md">
+  <div class="max-w-6xl mx-auto flex justify-between items-center px-4 py-2">
+    <!-- Logo in Navbar -->
+    <div class="flex items-center space-x-2">
+      <img src="img.jpeg" 
+           alt="Binary Edge Technologies Logo" 
+           class="w-10 h-10">
+      <span class="font-bold text-lg text-white">Binary Edge</span>
+    </div>
+
+    <!-- Menu -->
+    <div class="flex space-x-4 md:space-x-6">
       <a href="#about" class="text-white hover:text-orange-400 font-medium">About</a>
       <a href="#vision" class="text-white hover:text-orange-400 font-medium">Vision & Mission</a>
       <a href="#challenges" class="text-white hover:text-orange-400 font-medium">Challenges</a>
@@ -101,7 +117,9 @@
       <a href="#roadmap" class="text-white hover:text-orange-400 font-medium">Roadmap</a>
       <a href="#contact" class="text-white hover:text-orange-400 font-medium">Contact</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- About -->
   <section id="about" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
@@ -227,9 +245,9 @@
   <section id="contact" class="py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3 inline-block">Contact Us</h2>
-      <p class="mb-2">Visit our website: 
+      <!-- <p class="mb-2">Visit our website: 
         <a href="https://www.binaryedge.io" target="_blank" class="text-orange-300 font-semibold hover:underline">www.binaryedge.io</a>
-      </p>
+      </p> -->
       <p class="mb-2">Email: contact@binaryedge.io</p>
       <p>Location: Bengaluru, India</p>
     </div>
