--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(270deg, #3B82F6, #1E3A8A, #2563EB, #1E40AF);
       background-size: 800% 800%;
-      animation: gradientShift 20s ease infinite;
+      animation: gradientShift 20s ease infinite; /* animated gradient */
       color: white;
-      position: relative;
-      overflow-x: hidden;
     }
     @keyframes gradientShift {
       0% { background-position: 0% 50%; }
@@ -34,7 +32,6 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Glassmorphism Cards */
     .glass-card {
       background: rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(12px);
@@ -60,28 +57,9 @@
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
     }
-
-    /* Particles Canvas */
-    #particles {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 0;
-    }
-
-    header, nav, section, footer {
-      position: relative;
-      z-index: 1;
-    }
   </style>
 </head>
 <body>
-
-  <!-- Floating Particles -->
-  <canvas id="particles"></canvas>
 
   <!-- Hero Header -->
 <header class="h-[70vh] flex flex-col justify-center items-center text-white text-center" data-aos="fade-down">
@@ -119,7 +97,6 @@
     </div>
   </div>
 </nav>
-
 
   <!-- About -->
   <section id="about" class="max-w-6xl mx-auto px-6 py-16" data-aos="fade-up">
@@ -245,9 +222,9 @@
   <section id="contact" class="py-16 px-6" data-aos="fade-up">
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6 border-l-4 border-orange-500 pl-3 inline-block">Contact Us</h2>
-      <!-- <p class="mb-2">Visit our website: 
+      <p class="mb-2">Visit our website: 
         <a href="https://www.binaryedge.io" target="_blank" class="text-orange-300 font-semibold hover:underline">www.binaryedge.io</a>
-      </p> -->
+      </p>
       <p class="mb-2">Email: contact@binaryedge.io</p>
       <p>Location: Bengaluru, India</p>
     </div>
@@ -279,85 +256,6 @@
         loop: true
       });
     });
-  </script>
-
-  <!-- Particles with Blue-Orange Gradient Lines -->
-  <script>
-    const canvas = document.getElementById("particles");
-    const ctx = canvas.getContext("2d");
-    let particles = [];
-
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    }
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
-
-    class Particle {
-      constructor() {
-        this.x = Math.random() * canvas.width;
-        this.y = Math.random() * canvas.height;
-        this.radius = Math.random() * 2 + 1;
-        this.speedX = (Math.random() - 0.5) * 0.6;
-        this.speedY = (Math.random() - 0.5) * 0.6;
-      }
-      update() {
-        this.x += this.speedX;
-        this.y += this.speedY;
-        if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
-        if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
-      }
-      draw() {
-        ctx.beginPath();
-        ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
-        ctx.fillStyle = "rgba(255,255,255,0.8)";
-        ctx.shadowBlur = 10;
-        ctx.shadowColor = "#60A5FA";
-        ctx.fill();
-      }
-    }
-
-    function initParticles(count) {
-      particles = [];
-      for (let i = 0; i < count; i++) {
-        particles.push(new Particle());
-      }
-    }
-
-    function connectParticles() {
-      for (let i = 0; i < particles.length; i++) {
-        for (let j = i + 1; j < particles.length; j++) {
-          let dx = particles[i].x - particles[j].x;
-          let dy = particles[i].y - particles[j].y;
-          let distance = Math.sqrt(dx * dx + dy * dy);
-          if (distance < 120) {
-            const gradient = ctx.createLinearGradient(particles[i].x, particles[i].y, particles[j].x, particles[j].y);
-            gradient.addColorStop(0, "rgba(59,130,246,0.4)");  // blue
-            gradient.addColorStop(1, "rgba(249,115,22,0.4)");  // orange
-            ctx.beginPath();
-            ctx.strokeStyle = gradient;
-            ctx.lineWidth = 1.2;
-            ctx.moveTo(particles[i].x, particles[i].y);
-            ctx.lineTo(particles[j].x, particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-    }
-
-    function animateParticles() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      particles.forEach(p => {
-        p.update();
-        p.draw();
-      });
-      connectParticles();
-      requestAnimationFrame(animateParticles);
-    }
-
-    initParticles(80);
-    animateParticles();
   </script>
 
 </body>
